--- a/soapz-front/src/styles.css
+++ b/soapz-front/src/styles.css
@@ -1,1 +1,105 @@
 /* You can add global styles to this file, and also import other style files */
+.flex-center{
+    display: flex;
+    justify-content: center;
+}
+.flex-between{
+    display: flex;
+    justify-content: space-between;
+}
+
+.mb-2d25{
+    margin-bottom: 0.6rem!important;
+}
+
+.ch-white-lightgray { background-color: white; }
+.ch-white-lightgray:hover{
+    background-color: rgb(235, 235, 235);
+    transition: 0.2s;
+    cursor:pointer;
+}
+
+.dont-use-this-never{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 400px;
+    width: 100%;
+  }
+
+.text-no-wrap{
+    white-space: nowrap;
+}
+
+.align-items-center{
+    align-items: center;
+}
+
+.cursor-pointer{
+    cursor: pointer;
+}
+
+.isDisabled {
+    color: currentColor;
+    cursor: not-allowed;
+    opacity: 0.5;
+    text-decoration: none;
+  }
+
+.w-90{
+    width: 90%;
+}
+
+.w-65{
+    width: 65%;
+}
+.w-60{
+    width: 60%;
+}
+.w-35{
+    width: 35%;
+}
+.w-30{
+    width: 30%;
+}
+
+
+.h-50px{
+    height: 50px;
+}
+
+.h-80px{
+    height: 80px;
+}
+
+.h-94px{
+    height: 94px;
+}
+
+.h-100px{
+    height: 100px;
+}
+
+.h-200px{
+    height: 200px;
+}
+
+.h-340px{
+    height: 340px;
+}
+
+.h-500px{
+    height: 500px;
+}
+
+.text-justify{
+    text-align:justify;
+}
+
+.fs-0{
+    font-size: 3rem!important;
+}
+
+.fs-5-5{
+    font-size: 1.10rem!important;
+}
