--- a/soapz-front/src/app/app.component.html
+++ b/soapz-front/src/app/app.component.html
@@ -1,2 +1,2 @@
-    <app-header [isAuth]=true [isLibrarian]=true> </app-header>
+    <app-header> </app-header>
     <router-outlet></router-outlet>
