--- a/soapz-front/src/app/components/booklist/booklist-item/booklist-item.component.html
+++ b/soapz-front/src/app/components/booklist/booklist-item/booklist-item.component.html
@@ -1,13 +1,13 @@
-<section class="d-flex m-1" style="border:solid 1px black">
-    <div class="d-flex h-80px">
-        <img src = "../../../../assets/Images/{{item.photo}}" alt="" class="h-100">
+<section class="d-flex m-1 ms-2 ch-white-lightgray" style="border-radius:0.375rem" (click)="book()">
+    <div class="d-flex h-80px overflow-hidden" style="border-radius: 0.1em;">
+        <img src = "../../../../assets/Images/Books/{{item.photo}}" alt="" class="h-100">
     </div> 
-    <div class="d-flex flex-column w-100">
-        <div class="fw-bold m-1">{{item.title}}</div>
+    <div class="d-flex flex-column w-90 ms-2">
+        <div class="fw-bold m-1 mb-0 fs-5-5">{{item.title}}</div>
         <div class="ms-1">
             by {{item.author}} ({{item.yearPublished}})
         </div>
-        <div class="d-flex justify-content-between">
+        <div class="flex-between">
             <div class="ms-1" style="font-size: 14px; color:gray">
                 published by {{item.publishingHouse}} in {{item.language}}
             </div>
@@ -22,3 +22,4 @@
         </div>
     </div>  
 </section>
+<hr>
