--- a/soapz-front/src/app/components/booklist/filter-area/filter-area.component.html
+++ b/soapz-front/src/app/components/booklist/filter-area/filter-area.component.html
@@ -1,34 +1,34 @@
 <div class="m-3">
 <form [formGroup]="forma">
-    <div class="form-outline">
+    <div class="form-outline mb-2">
         <input type="text" id="title" formControlName="title" class="form-control"
           placeholder="Title" />
     </div>
-    <div class="form-outline">
+    <div class="form-outline mb-2">
         <input type="text" id="author" formControlName="author" class="form-control"
           placeholder="Author" />
     </div>
-    <div class="form-outline d-flex">
-        <input type="number" id="yearMin" formControlName="yearMin" class="form-control"
+    <div class="form-outline d-flex mb-2">
+        <input type="number" id="yearMin" formControlName="yearMin" class="form-control me-2"
           placeholder="Minimal year" />
         <input type="number" id="yearMax" formControlName="yearMax" class="form-control"
           placeholder="Maximal year" />
     </div>
-    <div class="form-outline">
+    <div class="form-outline mb-2">
         <input type="text" id="publisher" formControlName="publisher" class="form-control"
           placeholder="Publisher" />
     </div>
-    <div class="form-outline">
+    <div class="form-outline mb-2">
         <input type="text" id="language" formControlName="language" class="form-control"
           placeholder="Language" />
     </div>
-    <div class="form-outline d-flex">
-        <input type="number" id="pagesMin" formControlName="pagesMin" class="form-control"
+    <div class="form-outline d-flex mb-2">
+        <input type="number" id="pagesMin" formControlName="pagesMin" class="form-control me-2"
           placeholder="Minimal pages" />
         <input type="number" id="pagesMax" formControlName="pagesMax" class="form-control"
           placeholder="Maximal pages" />
     </div>
-    <div class="form-outline d-flex">
+    <div class="form-outline d-flex mb-2">
         <input type="checkbox" formControlName="isPresent" id="isPresent" class="form-check-input" />
         <label class="ms-1">Show present only</label>
     </div>
@@ -70,7 +70,7 @@
     </div> -->
 
     <div class="text-center pt-1 mb-5 pb-1 mt-4">
-      <button (click)="Filtered()" class="btn btn-warning btn-block fa-lg gradient-custom-2 mb-3" type="button">Search</button>
+      <button (click)="Filtered()" class="btn btn-info btn-outline-dark mb-3" type="button">Search</button>
     </div>
 
 
